src/objects/ACCL__Account_Task_Template__c.object
<CustomObject>
    <description>Holds the details of the customer task template,  to be used for customer tasks.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The customer task template is active and can be used for customer task creation.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Management_Type__c</fullName>
        <description>Describes the kind of management relation.</description>
        <label>Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>The customer task template is available for the sales org specified.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sorting order of the customer task template in overviews.</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__User_Roles__c</fullName>
        <description>User roles required for the user when creating calls based on this template.</description>
        <label>User Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACSF_Master_Data_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_KAM</fullName>
                </value>
                <value>
                    <fullName>ACSF_Sales_User</fullName>
                </value>
                <value>
                    <fullName>ACSF_Supervisor</fullName>
                </value>
                <value>
                    <fullName>ACSF_FA</fullName>
                </value>
                <value>
                    <fullName>ACSF_FM</fullName>
                </value>
                <value>
                    <fullName>ACSF_Inventory_Manager</fullName>
                </value>
                <value>
                    <fullName>ACSF_HQ_Sales_Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to workflow.</description>
        <label>Workflow</label>
        <referenceTo>ACCL__Workflow__c</referenceTo>
        <relationshipLabel>Customer Task Templates</relationshipLabel>
        <relationshipName>Customer_Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsPODTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is used for POD Task</description>
        <label>Is POD Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Task Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sort__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org field cannot be edited after creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Customer Task Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_Workflow</fullName>
        <active>true</active>
        <description>The Customer Task Template and Workflow must have the same Sales Org.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Workflow__c)) &amp;&amp; TEXT(ACCL__Workflow__r.ACCL__Sales_Org__c)  &lt;&gt;  TEXT(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Customer Task Template and Workflow must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>